# glitchtip-webhook-relay

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  config.example.yaml  justfile
.github/workflows/: docker-publish.yml
artifacts/: color_test_samples.json  mock_rev_server.py  test_color_webhook.py  test_webhook.sh
docs/plan/: 251117-mvp.md  251119-配置结构重构.md
src/: config.rs  converter.rs  main.rs  routes.rs  service.rs  types.rs
templates/feishu/: README.md  default.json.jinja2
